--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#" data-role="button" id="open_lib_button">Abrir Biblioteca</a>
                 <a href="#" data-role="button" id="open_alb_button">Abrir Album</a>
                 
-                <div id="settings_info" class="ui-body ui-body-b info"></div>
+                <div><a href="http://www.ifc-camboriu.edu.br" ><img src="ifc.jpg" border="1"></a></div>
             </div>
             <div data-role="footer" class="stickbottom">
                 <div><a rel="LICENSE" href="http://software.intel.com/html5/license/samples" target="_blank">Licença</a></div>
